--- a/pages/reports/ntak/daily_close.mdx
+++ b/pages/reports/ntak/daily_close.mdx
@@ -52,6 +52,14 @@ The NTAK daily close report differs from other reports in its generation process
 |:----------|:-----------------------------------------------------------------------------------|
 | `date`    | The date for which day data should be collected by the PMS for daily close report. |
 
+[//]: # (@formatter:off)
+```json copy
+{
+  "date": "2024-09-19"
+}
+```
+[//]: # (@formatter:on)
+
 ### Authentication
 
 To enhance the security of your endpoint, you have implemented a straightforward authorization mechanism.
